Fix line spacing of blurb description in homepage and nav links in about page

--- a/style.css
+++ b/style.css
@@ -272,7 +272,7 @@ nav {
 
 .blurb-desc {
     font-size: 3rem;
-    line-height: 2rem; 
+    line-height: 3rem; 
     color: #fff;
     text-align: left;
     padding-left: 10rem;
